[gd_scene load_steps=3 format=3 uid="uid://p15o423f6pf3"]

[ext_resource type="Script" path="res://phases/phase_7.gd" id="1_2adt8"]
[ext_resource type="Texture2D" uid="uid://dxgmy13s2g4un" path="res://assets/Asset 53.png" id="1_8xq0q"]

[node name="Phase7" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 167.0
offset_right = -772.0
offset_bottom = -231.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2adt8")
metadata/_edit_group_ = true

[node name="BattleBox" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 300.0
offset_bottom = 250.0
texture = ExtResource("1_8xq0q")
expand_mode = 1

[node name="Title" type="Label" parent="BattleBox"]
layout_mode = 0
offset_left = 27.0
offset_top = 19.0
offset_right = 267.0
offset_bottom = 42.0
text = "Battle plan"
horizontal_alignment = 1

[node name="PickLeader" type="Button" parent="BattleBox"]
layout_mode = 0
offset_left = 30.0
offset_top = 101.0
offset_right = 127.0
offset_bottom = 132.0
text = "Pick Leader"

[node name="PickCards" type="Button" parent="BattleBox"]
layout_mode = 0
offset_left = 31.0
offset_top = 144.0
offset_right = 128.0
offset_bottom = 175.0
text = "Pick Tretchery Cards"

[node name="Submit" type="Button" parent="BattleBox"]
layout_mode = 0
offset_left = 65.0
offset_top = 197.0
offset_right = 232.0
offset_bottom = 228.0
text = "Submit"

[node name="EnemyBox" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 8.0
offset_right = 338.0
offset_bottom = 174.0
texture = ExtResource("1_8xq0q")
expand_mode = 1

[node name="Title" type="Label" parent="EnemyBox"]
layout_mode = 0
offset_left = 27.0
offset_top = 19.0
offset_right = 267.0
offset_bottom = 42.0
text = "Pick Enemy"
horizontal_alignment = 1

[node name="Submit" type="Button" parent="EnemyBox"]
layout_mode = 0
offset_left = 66.0
offset_top = 116.0
offset_right = 233.0
offset_bottom = 147.0
text = "Submit"

[node name="Description" type="Label" parent="EnemyBox"]
offset_left = 35.0
offset_top = 50.0
offset_right = 242.0
offset_bottom = 99.0
text = "Pick an area to start a battle."

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="EnemyBox/Submit" to="." method="_on_submit_pressed"]
